[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Enemies/NormalGuy.png" type="Texture" id=1]
[ext_resource path="res://Src/Enemies/NormalGuy.gd" type="Script" id=2]
[ext_resource path="res://Src/Enemies/EnemyHitzone.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/dead.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="NormalGuy" type="Area2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
z_index = 20
texture = ExtResource( 1 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/RESET = SubResource( 4 )
anims/die = SubResource( 2 )
anims/idle = SubResource( 8 )
anims/walk = SubResource( 7 )

[node name="BaseEnemyHitzone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12
script = ExtResource( 3 )
vulnerable_to_jump = true
vulnerable_to_bullet = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BaseEnemyHitzone"]
polygon = PoolVector2Array( -8, 0, 0, -16, 8, 0 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 512.0
bus = "Sound"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
